# syntaxcomp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/syntaxcomp/: __init__.py  complexity.py  example.py
